--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,30 +8,102 @@ MERN, Mongo, Express, React.js, Node.js
 */
 
 /***** Colors ******/
-
-$background: #7cdbd5;
-$complement: #02c8a7;
-$emphasis: #f53240;
-$anchor: #f9be02;
+$bold: #DB5800;
+$emphasis: #FF9000;
+$anchor: #F0C600;
+$complement: #8EA106;
+$dark: #59631E;
 $plain: #ffffff;
 $shadow: lighten(#000000, 15%);
 
 /* ---
-
-#02c8a7 aquamarine
-#f53240 bright coral
-#f9be02 golden
+#DB5800 burnt orange
+#FF9000 orange pulp
+#F0C600 golden
+#8EA106 lime
+#59631E leaves
 #ffffff white
 #000000 black
 */
 
 /***** Fonts ******/
 
-$serif: 'Slabo 27px', serif;
-$sans: 'Cabin', sans-serif;
+$serif: 'Arvo', serif;
+$sans: 'PT Sans', sans-serif;
 
 /***** Normalize ******/
 
 @import 'normalize';
 
 /***** Mixins ******/
+
+
+
+/***** General Styles ******/
+
+html, body {
+  font-family: $sans;
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+  color: $dark;
+}
+
+p {
+  margin: 0;
+}
+
+/***** Detail Styles ******/
+
+.masthead {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30px;
+  width: 100%;
+  background: $bold;
+}
+
+.page {
+  height: 100vh;
+  width: 100%;
+}
+
+.pictionary, .apihack {
+  background: darken($plain, 5%);
+}
+
+.container {
+  width: 210px;
+  margin: auto;
+}
+
+.icon {
+  margin-top: 18vh;
+  height: 210px;
+  background: $emphasis;
+}
+
+.name, .title {
+  width: 100%;
+  margin: 2px 0;
+  text-align: justify;
+  text-align-last: start;
+}
+
+.name {
+  font-family: $serif;
+  font-size: 2em;
+}
+
+.firstname {
+  letter-spacing: 7px;
+}
+
+.lastname {
+  letter-spacing: 12px;
+}
+
+.title-text {
+  letter-spacing: 6px;
+}
