--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,7 +60,7 @@ p {
   height: 30px;
   width: 100%;
   background: $bold;
-  color: $emphasis;
+  color: $anchor;
   text-align: center;
 }
 
@@ -69,6 +69,15 @@ p {
   top: 0;
   left: 0;
   z-index: 10;
+}
+
+.top {
+  float: left;
+  width: 50%;
+  height: 100%;
+  margin: 0;
+  padding: 6px 0 0 0;
+  text-align: center;
 }
 
 .page {
