--- a/main.css
+++ b/main.css
@@ -427,24 +427,23 @@ p {
 .intro {
   height: 80vh; }
 
-.pictionary, .apihack {
-  background: #f2f2f2; }
-
 .logo {
   width: 210px;
   margin: auto; }
+
+.icon {
+  margin-top: 16vh;
+  height: 210px;
+  background: #F0C600; }
+
+.pictionary, .apihack {
+  background: #fff3bd; }
 
 .container {
   position: absolute;
   height: 60vh;
   width: 80vw;
-  margin: 10vh 10vw;
-  background: #F0C600; }
-
-.icon {
-  margin-top: 12vh;
-  height: 210px;
-  background: #F0C600; }
+  margin: 10vh 10vw; }
 
 .name, .title {
   width: 100%;
