--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,7 +38,12 @@ $pictionary: 'Slabo 27px', serif;
 
 /***** Mixins ******/
 
-
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
 
 /***** General Styles ******/
 
@@ -47,7 +52,15 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  color: $dark;
+  color: $bold;
+}
+
+a {
+  color: $bold;
+  text-decoration: none;
+  &:hover {
+    text-shadow: 0 0 2px $emphasis;
+  }
 }
 
 p {
@@ -59,7 +72,7 @@ p {
 .masthead, .bottomline {
   height: 30px;
   width: 100%;
-  background: $bold;
+  background: $dark;
   color: $anchor;
   text-align: center;
 }
@@ -78,6 +91,39 @@ p {
   margin: 0;
   padding: 6px 0 0 0;
   text-align: center;
+  &:hover {
+    cursor: pointer;
+    text-shadow: 0 0 2px $emphasis;
+  }
+}
+
+.list {
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  z-index: 9;
+  position: absolute;
+  background: $plain;
+  border: 1px solid $dark;
+  @include border-radius(1px);
+}
+
+.social {
+  top: 0;
+  left: 0;
+}
+
+.work {
+  top: 0;
+  right: 0;
+}
+
+.items {
+  width: 100%;
+  height: 30px;
+  border: 1px solid $dark;
+  padding: 0;
+  margin: 0;
 }
 
 .page {
@@ -102,7 +148,7 @@ p {
 }
 
 .pictionary, .apihack {
-  background: lighten($anchor, 40%);
+  background: lighten($anchor, 45%);
 }
 
 .container {
@@ -126,15 +172,17 @@ p {
 
 .firstname {
   letter-spacing: 7px;
+  margin-left: 2px;
 }
 
 .lastname {
   letter-spacing: 12px;
+  margin-left: 1px;
 }
 
 .title-text {
-  letter-spacing: 6px;
-  margin-left: 3px;
+  letter-spacing: 5px;
+  margin-left: 6px;
 }
 
 .img {
