--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,8 +35,20 @@ $pictionary: 'Slabo 27px', serif;
 /***** Normalize ******/
 
 @import 'normalize';
+@import "variables";
+@import "mixins";
+@import "path";
+@import "core";
+@import "larger";
+@import "fixed-width";
+@import "list";
+@import "bordered-pulled";
+@import "animated";
+@import "rotated-flipped";
+@import "stacked";
+@import "icons";
 
-/***** Mixins ******/
+/***** Mixins & Keyframes ******/
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -52,19 +64,28 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  color: $bold;
+  color: $dark;
+}
+
+i {
+  &:hover {
+    cursor: pointer;
+    text-shadow: 0 0 2px $emphasis;
+  }
 }
 
 a {
   color: $bold;
   text-decoration: none;
   &:hover {
-    text-shadow: 0 0 2px $emphasis;
+    cursor: pointer;
+    text-shadow: 0 0 10px $anchor;
   }
 }
 
 p {
   margin: 0;
+  padding: 0;
 }
 
 /***** Detail Styles ******/
@@ -72,8 +93,7 @@ p {
 .masthead, .bottomline {
   height: 30px;
   width: 100%;
-  background: $dark;
-  color: $anchor;
+  color: $dark;
   text-align: center;
 }
 
@@ -82,80 +102,72 @@ p {
   top: 0;
   left: 0;
   z-index: 10;
+  font-size: 1.5rem;
+}
+
+.masthead.clicked .sites {
+  transform: translate(100%, 0);
 }
 
 .top {
   float: left;
-  width: 50%;
+  width: 10%;
   height: 100%;
-  margin: 0;
-  padding: 6px 0 0 0;
-  text-align: center;
-  &:hover {
-    cursor: pointer;
-    text-shadow: 0 0 2px $emphasis;
-  }
-}
-
-.list {
-  margin: 0;
+  margin: 10px 0 0 0;
   padding: 0;
-  width: 50%;
-  z-index: 9;
-  position: absolute;
-  background: $plain;
-  border: 1px solid $dark;
-  @include border-radius(1px);
+  line-height: 30px;
+  padding: 10px;
+  text-align: center;
 }
 
-.social {
-  top: 0;
-  left: 0;
+.burger {
+  background: $plain;
+}
+
+.sites {
+  z-index: -1;
+  width: 70%;
+  position: fixed;
+  left: -70%;
+  transition: transform 300ms ease-in-out;
+}
+
+.fa {
+  display: inline-block;
+  width: 20%;
 }
 
 .work {
-  top: 0;
   right: 0;
 }
 
-.items {
-  width: 100%;
-  height: 30px;
-  border: 1px solid $dark;
-  padding: 0;
-  margin: 0;
-}
-
 .page {
-  height: 90vh;
+  height: 30vh;
   width: 100%;
   position: relative;
 }
 
 .intro {
-  height: 80vh;
+  height: 70vh;
 }
 
 .logo {
   width: 210px;
   margin: auto;
+  background: $complement;
+  color: $anchor;
 }
 
 .icon {
-  margin-top: 16vh;
   height: 210px;
   background: $anchor;
 }
 
-.pictionary, .apihack {
-  background: lighten($anchor, 45%);
-}
-
 .container {
   position: absolute;
-  height: 60vh;
-  width: 80vw;
-  margin: 10vh 10vw;
+  height: 100%;
+  width: 100%;
+  margin: auto;
 }
 
 .name, .title {
@@ -166,6 +178,7 @@ p {
 }
 
 .name {
+  margin-top: 25vh;
   font-family: $serif;
   font-size: 2em;
 }
@@ -180,9 +193,20 @@ p {
   margin-left: 1px;
 }
 
-.title-text {
+.title-text, .proj-transition {
   letter-spacing: 5px;
   margin-left: 6px;
+}
+
+.proj-transition {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  color: $bold;
+  background: $plain;
 }
 
 .img {
@@ -196,9 +220,9 @@ p {
 
 .description {
   width: 40%;
-  height: 80%;
+  height: 70%;
   position: absolute;
-  top: 5%;
+  top: 15%;
   right: 15%;
   border-left: 1px solid $dark;
 }
@@ -206,23 +230,21 @@ p {
 .proj-title {
   font-size: 1.75rem;
   position: absolute;
-  top: 15%;
+  top: 0;
   left: 10%;
+  color: $bold;
 }
 
 .pic, .chat-words, .api, .learn {
   position: absolute;
   top: 35%;
   left: 10%;
+  font-size: .75rem;
 }
 
 .pic-title {
   font-family: $pictionary;
   letter-spacing: 2px;
-}
-
-.chat-title {
-  top: 20%;
 }
 
 .chat-words {
@@ -233,15 +255,18 @@ p {
   font-family: $serif;
 }
 
-.learn-title {
-  top: 30%;
+.learning {
+  margin-bottom: 30px;
 }
 
 .learn {
   top: 70%;
 }
 
-footer, .bottomline {
+.bottomline {
   margin: 0;
   padding: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
