Changes screenshots from backgrounds to img tags

--- a/main.css
+++ b/main.css
@@ -2468,7 +2468,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  color: #59631E; }
+  color: #8EA106; }
 
 a {
   color: #8EA106;
@@ -2581,36 +2581,24 @@ p {
   text-align: center;
   position: absolute;
   bottom: 0;
-  color: #DB5800;
   background: #ffffff; }
 
 .img {
-  height: 60%;
-  max-height: 480px;
-  width: 80%;
-  max-width: 500px;
-  margin: 5% auto;
+  width: 300px;
+  margin: auto;
   padding: 0;
-  background: #8EA106; }
+  border: 1px solid #8EA106; }
 
 .screen, .code {
   float: left;
-  width: 44%;
-  height: 100%;
-  margin-top: 0;
-  margin-left: 4%;
+  width: 120px;
+  height: 180px;
   padding: 0;
   background: #F0C600;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   border-radius: 20px; }
-
-.screen {
-  margin-left: 5.5%; }
-
-.code {
-  margin-left: 1%; }
 
 .description {
   width: 80%;
@@ -2623,24 +2611,14 @@ p {
   font-size: 1.75rem;
   color: #DB5800; }
 
-.pic, .chat-words, .api, .learn {
+.text {
   font-size: .75rem; }
-
-#pictionary-screen {
-  background: url("http://i.imgur.com/zX0b8U8.png");
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat; }
 
 #pictionary-code {
   background: url("http://i.imgur.com/Nbm8jJE.png");
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat; }
-
-.pic-title {
-  font-family: "Slabo 27px", serif;
-  letter-spacing: 2px; }
 
 #chat-screen {
   background: url("http://i.imgur.com/9RxoEsT.png");
@@ -2654,9 +2632,6 @@ p {
   background-position: center top;
   background-repeat: no-repeat; }
 
-.chat-words {
-  top: 40%; }
-
 #locpics-screen {
   background: url("http://i.imgur.com/xtqsYuv.png");
   background-size: contain;
@@ -2668,9 +2643,6 @@ p {
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat; }
-
-.api-title {
-  font-family: "Arvo", serif; }
 
 #shop-screen {
   background: url("http://i.imgur.com/7sqplVg.png");
@@ -2695,6 +2667,9 @@ p {
 
 .learn {
   top: 70%; }
+
+.activity {
+  text-decoration: underline; }
 
 .bottomline {
   margin: 0;
