--- a/sass/main.scss
+++ b/sass/main.scss
@@ -64,7 +64,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  color: $dark;
+  color: $complement;
 }
 
 a {
@@ -200,37 +200,31 @@ p {
   text-align: center;
   position: absolute;
   bottom: 0;
-  color: $bold;
   background: $plain;
 }
 
 .img {
-  height: 60%;
-  max-height: 480px;
-  width: 80%;
-  max-width: 500px;
-  margin: 5% auto;
+  width: 300px;
+  margin: auto;
   padding: 0;
-  background: $complement;
+  border: 1px solid $complement;
 }
 
 .screen, .code {
   float: left;
-  width: 44%;
-  height: 100%;
-  margin-top: 0;
-  margin-left: 4%;
+  width: 120px;
+  height: 180px;
   padding: 0;
   background: $anchor;
   @include border-radius(20px);
 }
 
 .screen {
-  margin-left: 5.5%;
+
 }
 
 .code {
-  margin-left: 1%;
+
 }
 
 .description {
@@ -246,15 +240,11 @@ p {
   color: $bold;
 }
 
-.pic, .chat-words, .api, .learn {
+.text {
   font-size: .75rem;
 }
 
 #pictionary-screen {
-  background: url('http://i.imgur.com/zX0b8U8.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
 }
 
 #pictionary-code {
@@ -262,11 +252,6 @@ p {
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat;
-}
-
-.pic-title {
-  font-family: $pictionary;
-  letter-spacing: 2px;
 }
 
 #chat-screen {
@@ -283,10 +268,6 @@ p {
   background-repeat: no-repeat;
 }
 
-.chat-words {
-  top: 40%;
-}
-
 #locpics-screen {
   background: url('http://i.imgur.com/xtqsYuv.png');
   background-size: contain;
@@ -299,10 +280,6 @@ p {
   background-size: contain;
   background-position: center top;
   background-repeat: no-repeat;
-}
-
-.api-title {
-  font-family: $serif;
 }
 
 #shop-screen {
@@ -332,6 +309,10 @@ p {
 
 .learn {
   top: 70%;
+}
+
+.activity {
+  text-decoration: underline;
 }
 
 .bottomline {
