--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,12 +99,12 @@ p {
 }
 
 .masthead.clicked .sites {
-  transform: translate(110%, 0);
+  transform: translate(100%, 0);
 }
 
 .top {
   float: left;
-  width: 10%;
+  width: 8%;
   height: 100%;
   margin: 10px 0 0 0;
   padding: 0;
@@ -119,9 +119,9 @@ p {
 
 .sites {
   z-index: -1;
-  width: 70%;
+  width: 100%;
   position: absolute;
-  left: -70%;
+  left: -100%;
   transition: transform 300ms ease-in-out;
 }
 
@@ -135,15 +135,15 @@ p {
 }
 
 .page {
-  height: 79vh;
-  margin-top: 20vh;
+  height: 99vh;
+  margin-top: 0;
   width: 100%;
   position: relative;
   z-index: 2;
 }
 
 .intro {
-  padding-top: 5vh;
+  padding-top: 25vh;
   height: 74vh;
 }
 
@@ -160,10 +160,10 @@ p {
 }
 
 .container {
-  position: absolute;
   height: 100%;
-  width: 100%;
-  margin: auto;
+  width: 244px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .name, .title {
@@ -206,8 +206,7 @@ p {
 .img {
   width: 300px;
   margin: auto;
-  padding: 0;
-  border: 1px solid $complement;
+  padding-top: 30vh;
 }
 
 .screen, .code {
@@ -224,14 +223,15 @@ p {
 }
 
 .code {
-
+  margin-left: 4px;
 }
 
 .description {
+  clear: both;
   width: 80%;
   max-width: 500px;
-  height: 60%;
   margin: 0 auto;
+  padding-top: 24px;
   text-align: center;
 }
 
@@ -244,63 +244,11 @@ p {
   font-size: .75rem;
 }
 
-#pictionary-screen {
-}
-
-#pictionary-code {
-  background: url('http://i.imgur.com/Nbm8jJE.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#chat-screen {
-  background: url('http://i.imgur.com/9RxoEsT.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#chat-code {
-  background: url('http://i.imgur.com/RSVmp9O.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#locpics-screen {
-  background: url('http://i.imgur.com/xtqsYuv.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#locpics-code {
-  background: url('http://i.imgur.com/U0uCT3u.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#shop-screen {
-  background: url('http://i.imgur.com/7sqplVg.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
-#shop-code {
-  background: url('http://i.imgur.com/22lociX.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-}
-
 #react-screen {
-  background: url('http://i.imgur.com/1lQFt1f.png');
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
+  clear: both;
+  float: none;
+  height: 120px;
+  padding-left: 60px;
 }
 
 .learning {
