--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,6 +67,18 @@ $pictionary: 'Slabo 27px', serif;
           border-radius: $radius;
 }
 
+@mixin box-shadow($top, $left, $blur, $spread, $color, $inset: false) {
+  @if $inset {
+    -webkit-box-shadow:inset $top $left $blur $spread $color;
+    -moz-box-shadow:inset $top $left $blur $spread $color;
+    box-shadow:inset $top $left $blur $spread $color;
+  } @else {
+    -webkit-box-shadow: $top $left $blur $spread $color;
+    -moz-box-shadow: $top $left $blur $spread $color;
+    box-shadow: $top $left $blur $spread $color;
+  }
+}
+
 /***** General Styles ******/
 
 html, body {
@@ -74,15 +86,15 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 1em;
-  color: $complement;
+  color: $dark;
 }
 
 a {
-  color: $complement;
+  color: $dark;
   text-decoration: none;
   &:hover {
     cursor: pointer;
-    text-shadow: 0 0 6px $anchor;
+    text-shadow: 0 0 4px $anchor;
   }
 }
 
@@ -95,16 +107,15 @@ p {
 
 .masthead, .bottomline {
   width: 100%;
-  color: $dark;
   text-align: center;
+  background: $complement;
 }
 
 .masthead {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
-  height: 30px;
   font-size: 1.5rem;
 }
 
@@ -124,7 +135,7 @@ p {
 }
 
 .burger {
-  background: $plain;
+  background: $complement;
 }
 
 .sites {
@@ -145,7 +156,7 @@ p {
 }
 
 .page {
-  height: 100vh;
+  height: 80vh;
   margin-top: 0;
   width: 100%;
   position: relative;
@@ -190,8 +201,9 @@ p {
 .logo {
   width: 210px;
   margin: auto;
-  background: $complement;
+  background: lighten($dark, 10%);
   color: $anchor;
+  @include box-shadow(0, 8px, 6px, -4px, lighten($shadow, 30%));
 }
 
 .icon {
@@ -256,6 +268,7 @@ p {
   padding: 0;
   background: $anchor;
   @include border-radius(20px);
+  @include box-shadow(0, 14px, 8px, -8px, lighten($shadow, 30%));
 }
 
 .screen {
@@ -307,7 +320,6 @@ p {
 }
 
 .bottomline {
-  background: $complement;
   margin: 0;
   padding: 0;
   height: 20px;
@@ -353,7 +365,7 @@ p {
   }
 }
 
-@media screen and (min-width: 751px) {
+@media screen and (min-width: 1051px) {
 
   .container {
   height: 100%;
@@ -361,13 +373,16 @@ p {
   }
 
   .img {
-    width: 680px;
-    padding-top: 20vh;
+    width: 500px;
+    padding-top: 5vh;
   }
   .screen, .code {
-    width: 320px;
-    height: 480px;
-    margin-left: 18px;
+    width: 240px;
+    height: 360px;
+  }
+
+  .screen {
+    margin-left: 6px;
   }
 
   .code {
