--- a/sass/main.scss
+++ b/sass/main.scss
@@ -168,22 +168,20 @@ p {
 }
 
 .intro {
-  padding-top: 25vh;
+  padding-top: 12vh;
   height: 75vh;
 }
 
-#hello {
-  width: 210px;
-  margin: 12px auto;
-  text-align: center;
+#hello, .stack {
+  margin: 8px 16px 0 16px;
 }
 
 .logo {
-  width: 210px;
+  width: 100%;
   margin: auto;
   background: lighten($dark, 10%);
   color: $anchor;
-  @include box-shadow(0, 8px, 6px, -4px, lighten($shadow, 30%));
+  padding-left: 16px;
 }
 
 .icon {
@@ -218,10 +216,6 @@ p {
 .lastname {
   letter-spacing: 12px;
   margin-left: 1px;
-}
-
-.text {
-  margin-top: 16px;
 }
 
 #projects-intro {
