--- a/main.css
+++ b/main.css
@@ -1,22 +1,25 @@
 @charset "UTF-8";
 /*
 Theme Name: Portfolio
-Description: Web development portfolio featuring the MERN stack
-Author: Michael J Melton <meltonm83@gmail.com>
-Author URI: http://mjm.herokuapp.com
-Tags: Website, Portfolio, Drawing, Pictionary, Chat, Chatroom, API, Pictures,
-MERN, Mongo, Express, React.js, Node.js
+Description: JavaScript web development portfolio
+Author: Michael J Melton <michael@MeltWebs.com>
+Author URI: http://MeltWebs.com
+Tags: Website, Portfolio, Drawing, Pictionary, Chat, Chatroom, Shopping List, Pictures,
+MERN, Mongo, Express, React, Node.js, SEO, Search Engine Optimization
 */
 /***** Colors ******/
-/* ---
-#DB5800 burnt orange
-#FF9000 orange pulp
-#F0C600 golden
-#8EA106 lime
-#59631E leaves
-#ffffff white
-#000000 black
-*/
+/* dark blue */
+/* red */
+/* white */
+/* light blue */
+/* faded blue */
+/* Alternate Colors */
+/* $dark: #5F5448 brown */
+/* $emphasis: #F24C27 blood orange */
+/* $background: #FFFFFA white */
+/* $complement: #037E8C light sea */
+/* $anchor: #024959 dark sea */
+/* Archive Colors */
 /***** Fonts ******/
 /***** Normalize ******/
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
@@ -2464,249 +2467,52 @@ textarea {
 /***** Mixins & Keyframes ******/
 /***** General Styles ******/
 html, body {
-  font-family: "PT Sans", sans-serif;
-  margin: 0;
-  padding: 0;
+  font-family: sans-serif;
   font-size: 1em;
-  color: #59631E; }
+  color: #3498DB;
+  background: #ECF0F1; }
+
+html, body, div, h1, h2, h3, h4, h5, p {
+  margin: 0;
+  padding: 0; }
 
 a {
-  color: #59631E;
-  text-decoration: none; }
+  color: #2980B9; }
   a:hover {
     cursor: pointer;
-    text-shadow: 0 0 4px #F0C600; }
+    text-shadow: 0 0 4px #3498DB; }
 
 p {
   margin: 0;
   padding: 0; }
 
 /***** Detail Styles ******/
-.masthead, .bottomline {
-  width: 100%;
-  text-align: center; }
+.wrapper {
+  width: 100%; }
 
 .masthead {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  font-size: 1.5rem; }
+  background: #2C3E50;
+  color: #ECF0F1; }
 
-.masthead.clicked .sites {
-  transform: translate(100%, 0); }
+.title {
+  margin-left: 16px; }
 
 .top {
-  float: left;
-  width: 8%;
-  height: 100%;
-  margin: 10px 0 0 0;
-  padding: 0;
-  line-height: 30px;
-  padding: 10px;
-  text-align: center; }
-
-.burger {
-  background: #ffffff; }
-
-#arrow {
-  color: #e68200; }
-
-.sites {
-  z-index: -1;
-  width: 100%;
-  position: absolute;
-  left: -100%;
-  transition: transform 300ms ease-in-out; }
-
-.fa {
-  display: inline-block;
-  width: 20%; }
-
-.work {
-  right: 0; }
-
-.page {
-  height: 80vh;
-  margin-top: 0;
-  width: 100%;
-  position: relative;
-  z-index: 2;
-  color: #788805; }
-
-.intro {
-  padding-top: 12vh;
-  height: 75vh; }
-
-#hello, .stack {
-  margin: 8px 16px 0 16px; }
-
-.logo {
-  width: 100%;
-  margin: auto;
-  background: #7c8a2a;
-  color: #F0C600;
-  padding-left: 16px; }
-
-.icon {
-  height: 210px;
-  background: #F0C600; }
-
-.container {
-  height: 100%;
-  width: 244px;
-  margin-right: auto;
-  margin-left: auto; }
-
-.name, .title {
-  width: 100%;
-  margin: 2px 0;
-  text-align: justify;
-  text-align-last: start; }
-
-.name {
-  font-family: "Arvo", serif;
-  font-size: 2em; }
-
-.firstname {
-  letter-spacing: 7px;
-  margin-left: 2px; }
-
-.lastname {
-  letter-spacing: 12px;
-  margin-left: 1px; }
-
-#projects-intro {
-  margin-top: 32px; }
-
-.title-text, .proj-transition {
-  letter-spacing: 5px;
-  margin-left: 6px; }
-
-.proj-transition {
-  width: 100%;
-  margin: 0;
-  padding: 0;
+  float: right;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  background: #ffffff; }
+  color: #ECF0F1; }
 
-.pictionary {
-  text-align: center; }
+.collaborate {
+  background: #3498DB; }
 
-.img {
-  width: 300px;
-  margin: auto;
-  padding-top: 20vh; }
+.quote {
+  background: #E74C3C; }
 
-.screen, .code {
-  float: left;
-  width: 116px;
-  height: 176px;
-  padding: 0;
-  background: #F0C600;
-  border: 2px solid #8EA106;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  border-radius: 20px;
-  -webkit-box-shadow: 0 14px 8px -8px #737373;
-  -moz-box-shadow: 0 14px 8px -8px #737373;
-  box-shadow: 0 14px 8px -8px #737373; }
+.explore {
+  background: #2980B9; }
 
-.code {
-  margin-left: 4px; }
-
-.description {
-  clear: both;
-  width: 80%;
-  max-width: 500px;
-  margin: 0 auto;
-  padding-top: 24px;
-  text-align: center; }
-
-.proj-title {
-  font-size: 1.75rem;
-  color: #DB5800; }
-
-#react-screen {
-  clear: both;
-  float: none;
-  height: 120px;
-  margin-left: 60px;
-  -webkit-box-shadow: 0 16px 16px -20px #737373;
-  -moz-box-shadow: 0 16px 16px -20px #737373;
-  box-shadow: 0 16px 16px -20px #737373; }
-
-.learning {
-  margin-bottom: 30px; }
-
-.learn {
-  top: 70%; }
-
-#activity {
-  text-decoration: underline;
-  color: #e68200; }
-  #activity:hover {
-    text-shadow: 0 0 1px #27408b; }
-
-.bottomline {
-  margin: 0;
-  padding: 0;
-  height: 20px;
-  background: #8EA106; }
-
-#smile {
-  width: 5%; }
-
-/***** Media Queries ******/
-@media screen and (min-width: 401px) {
-  .container {
-    height: 100%;
-    width: 100%; }
-  .img {
-    width: 340px;
-    padding-top: 20vh; }
-  .screen, .code {
-    width: 160px;
-    height: 240px;
-    margin-left: 8px; }
-  .code {
-    margin-left: 4px; }
-  .description {
-    width: 80%;
-    max-width: 500px;
-    padding-top: 24px; }
-  #react-screen {
-    width: 160px;
-    height: 160px;
-    margin-left: 90px;
-    padding-left: 0; } }
-
-@media screen and (min-width: 1051px) {
-  .container {
-    height: 100%;
-    width: 100%; }
-  .img {
-    width: 500px;
-    padding-top: 5vh; }
-  .screen, .code {
-    width: 236px;
-    height: 356px; }
-  .screen {
-    margin-left: 6px; }
-  .code {
-    margin-left: 4px; }
-  .description {
-    width: 80%;
-    max-width: 500px;
-    padding-top: 24px; }
-  #react-screen {
-    width: 320px;
-    height: 320px;
-    margin-left: 90px;
-    padding-left: 0;
-    -webkit-box-shadow: 0 18px 16px -24px #737373;
-    -moz-box-shadow: 0 18px 16px -24px #737373;
-    box-shadow: 0 18px 16px -24px #737373; } }
+@media screen and (max-width: 400px) {
+  .top {
+    width: 33%; }
+  .quote {
+    width: 34%; } }
