--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,21 +1,27 @@
 /*
 Theme Name: Portfolio
-Description: Web development portfolio featuring the MERN stack
-Author: Michael J Melton <meltonm83@gmail.com>
-Author URI: http://mjm.herokuapp.com
-Tags: Website, Portfolio, Drawing, Pictionary, Chat, Chatroom, API, Pictures,
-MERN, Mongo, Express, React.js, Node.js
+Description: JavaScript web development portfolio
+Author: Michael J Melton <michael@MeltWebs.com>
+Author URI: http://MeltWebs.com
+Tags: Website, Portfolio, Drawing, Pictionary, Chat, Chatroom, Shopping List, Pictures,
+MERN, Mongo, Express, React, Node.js, SEO, Search Engine Optimization
 */
 
 /***** Colors ******/
-$bold: #DB5800;
-$emphasis: #FF9000;
-$anchor: #F0C600;
-$complement: #8EA106;
-$dark: #59631E;
-$plain: #ffffff;
-$shadow: lighten(#000000, 15%);
+$dark: #2C3E50 /* dark blue */ ;
+$emphasis: #E74C3C /* red */ ;
+$background: #ECF0F1 /* white */ ;
+$complement: #3498DB /* light blue */ ;
+$anchor: #2980B9 /* faded blue */ ;
 
+/* Alternate Colors */
+/* $dark: #5F5448 brown */ ;
+/* $emphasis: #F24C27 blood orange */ ;
+/* $background: #FFFFFA white */ ;
+/* $complement: #037E8C light sea */ ;
+/* $anchor: #024959 dark sea */ ;
+
+/* Archive Colors */
 $pictionary-back: #02c8a7;
 $pictionary-text: #f53240;
 $thechat-back: #27408b;
@@ -26,21 +32,10 @@ $shop-back: #85DB18;
 $shop-text: #493F0B;
 $react-text: #00d8ff;
 
-/* ---
-#DB5800 burnt orange
-#FF9000 orange pulp
-#F0C600 golden
-#8EA106 lime
-#59631E leaves
-#ffffff white
-#000000 black
-*/
-
 /***** Fonts ******/
 
-$serif: 'Arvo', serif;
-$sans: 'PT Sans', sans-serif;
-$pictionary: 'Slabo 27px', serif;
+$serif: serif;
+$sans: sans-serif;
 
 /***** Normalize ******/
 
@@ -83,18 +78,21 @@ $pictionary: 'Slabo 27px', serif;
 
 html, body {
   font-family: $sans;
+  font-size: 1em;
+  color: $complement;
+  background: $background;
+}
+
+html, body, div, h1, h2, h3, h4, h5, p {
   margin: 0;
   padding: 0;
-  font-size: 1em;
-  color: $dark;
 }
 
 a {
-  color: $dark;
-  text-decoration: none;
+  color: $anchor;
   &:hover {
     cursor: pointer;
-    text-shadow: 0 0 4px $anchor;
+    text-shadow: 0 0 4px $complement;
   }
 }
 
@@ -105,284 +103,42 @@ p {
 
 /***** Detail Styles ******/
 
-.masthead, .bottomline {
+.wrapper {
   width: 100%;
-  text-align: center;
 }
 
 .masthead {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  font-size: 1.5rem;
+  background: $dark;
+  color: $background;
 }
 
-.masthead.clicked .sites {
-  transform: translate(100%, 0);
+.title {
+  margin-left: 16px;
 }
 
 .top {
-  float: left;
-  width: 8%;
-  height: 100%;
-  margin: 10px 0 0 0;
-  padding: 0;
-  line-height: 30px;
-  padding: 10px;
+  float: right;
   text-align: center;
+  color: $background;
 }
 
-.burger {
-  background: $plain;
-}
-
-#arrow {
-  color: darken($emphasis, 5%);
-}
-
-.sites {
-  z-index: -1;
-  width: 100%;
-  position: absolute;
-  left: -100%;
-  transition: transform 300ms ease-in-out;
-}
-
-.fa {
-  display: inline-block;
-  width: 20%;
-}
-
-.work {
-  right: 0;
-}
-
-.page {
-  height: 80vh;
-  margin-top: 0;
-  width: 100%;
-  position: relative;
-  z-index: 2;
-  color: darken($complement, 5%);
-}
-
-.intro {
-  padding-top: 12vh;
-  height: 75vh;
-}
-
-#hello, .stack {
-  margin: 8px 16px 0 16px;
-}
-
-.logo {
-  width: 100%;
-  margin: auto;
-  background: lighten($dark, 10%);
-  color: $anchor;
-  padding-left: 16px;
-}
-
-.icon {
-  height: 210px;
-  background: $anchor;
-}
-
-.container {
-  height: 100%;
-  width: 244px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.name, .title {
-  width: 100%;
-  margin: 2px 0;
-  text-align: justify;
-  text-align-last: start;
-}
-
-.name {
-  font-family: $serif;
-  font-size: 2em;
-}
-
-.firstname {
-  letter-spacing: 7px;
-  margin-left: 2px;
-}
-
-.lastname {
-  letter-spacing: 12px;
-  margin-left: 1px;
-}
-
-#projects-intro {
-  margin-top: 32px;
-}
-
-.title-text, .proj-transition {
-  letter-spacing: 5px;
-  margin-left: 6px;
-}
-
-.proj-transition {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  background: $plain;
-}
-
-.pictionary {
-  text-align: center;
-}
-
-.img {
-  width: 300px;
-  margin: auto;
-  padding-top: 20vh;
-}
-
-.screen, .code {
-  float: left;
-  width: 116px;
-  height: 176px;
-  padding: 0;
-  background: $anchor;
-  border: 2px solid $complement;
-  @include border-radius(20px);
-  @include box-shadow(0, 14px, 8px, -8px, lighten($shadow, 30%));
-}
-
-.code {
-  margin-left: 4px;
-}
-
-.description {
-  clear: both;
-  width: 80%;
-  max-width: 500px;
-  margin: 0 auto;
-  padding-top: 24px;
-  text-align: center;
-}
-
-.proj-title {
-  font-size: 1.75rem;
-  color: $bold;
-}
-
-#react-screen {
-  clear: both;
-  float: none;
-  height: 120px;
-  margin-left: 60px;
-  @include box-shadow(0, 16px, 16px, -20px, lighten($shadow, 30%));
-}
-
-.learning {
-  margin-bottom: 30px;
-}
-
-.learn {
-  top: 70%;
-}
-
-#activity {
-  text-decoration: underline;
-  color: darken($emphasis, 5%);
-  &:hover {
-    text-shadow: 0 0 1px $thechat-back;
-  }
-}
-
-.bottomline {
-  margin: 0;
-  padding: 0;
-  height: 20px;
+.collaborate {
   background: $complement;
 }
 
-#smile {
-  width: 5%;
+.quote {
+  background: $emphasis;
 }
 
-/***** Media Queries ******/
-
-@media screen and (min-width: 401px) {
-
-  .container {
-  height: 100%;
-  width: 100%;
-  }
-
-  .img {
-    width: 340px;
-    padding-top: 20vh;
-  }
-  .screen, .code {
-    width: 160px;
-    height: 240px;
-    margin-left: 8px;
-  }
-
-  .code {
-    margin-left: 4px;
-  }
-
-  .description {
-    width: 80%;
-    max-width: 500px;
-    padding-top: 24px;
-  }
-
-  #react-screen {
-    width: 160px;
-    height: 160px;
-    margin-left: 90px;
-    padding-left: 0;
-  }
+.explore {
+  background: $anchor;
 }
 
-@media screen and (min-width: 1051px) {
-
-  .container {
-  height: 100%;
-  width: 100%;
+@media screen and (max-width: 400px) {
+  .top {
+    width: 33%;
   }
-
-  .img {
-    width: 500px;
-    padding-top: 5vh;
-  }
-  .screen, .code {
-    width: 236px;
-    height: 356px;
-  }
-
-  .screen {
-    margin-left: 6px;
-  }
-
-  .code {
-    margin-left: 4px;
-  }
-
-  .description {
-    width: 80%;
-    max-width: 500px;
-    padding-top: 24px;
-  }
-
-  #react-screen {
-    width: 320px;
-    height: 320px;
-    margin-left: 90px;
-    padding-left: 0;
-    @include box-shadow(0, 18px, 16px, -24px, lighten($shadow, 30%));
+  .quote {
+    width: 34%;
   }
 }
